<resources>
    <string name="fs_all_files">All files</string>
    <string name="fs_root">Root</string>
    <string name="fs_ok">OK</string>
    <string name="fs_cancel">Cancel</string>
    <string name="fs_selected_pattern">Selected(%d)</string>
    <string name="fs_select_all">Select all</string>
    <string name="fs_all_not_select">Deselect all</string>
    <string name="fs_clear">Clear</string>
    <string name="fs_close">Close</string>
    <string name="fs_single_item_pattern">%d item</string>
    <string name="fs_multi_item_pattern">%d items</string>
    <string name="fs_selected_item_pattern">%d selected</string>
    <string name="fs_new_folder">New Folder</string>
    <string name="fs_folder_create_success">The folder creation successfully</string>
    <string name="fs_folder_create_fail">The folder creation failed</string>
</resources>
