<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/fsMainBg"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <View
        android:id="@+id/fsstatusBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    
    <RelativeLayout
        android:id="@+id/fslayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/fstvClose"
            android:text="@string/fs_close"
            android:textColor="@color/fsWhite"
            android:gravity="center"
            android:textSize="16dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:background="@drawable/fs_simple_btn_bg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/fstvTitle"
            android:textSize="16dp"
            android:text="@string/fs_selected_item_pattern"
            android:layout_centerInParent="true"
            android:textColor="@color/fsWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/fstvClear"
            android:background="@drawable/fs_simple_btn_bg"
            android:layout_alignParentEnd="true"
            android:text="@string/fs_clear"
            android:textColor="@color/fsWhite"
            android:gravity="center"
            android:textSize="16dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </RelativeLayout>
    <ListView
        android:id="@+id/fslv"
        android:divider="@null"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>