<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <View
        android:id="@+id/fsstatusBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    
    <RelativeLayout
        android:id="@+id/fslayoutTitle"
        android:layout_below="@id/fsstatusBar"
        android:background="@color/fsColorPrimary"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        
        <ImageView
            android:id="@+id/fsivBack"
            android:background="@drawable/fs_simple_btn_bg"
            android:scaleType="fitStart"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:src="@drawable/fs_back"
            android:layout_width="55dp"
            android:layout_height="50dp"/>
        
        <TextView
            android:id="@+id/fstvTitle"
            android:textSize="18dp"
            android:layout_centerInParent="true"
            android:textColor="@color/fsWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <ImageView
            android:id="@+id/fsivMore"
            android:background="@drawable/fs_simple_btn_bg"
            android:padding="16dp"
            android:src="@drawable/fs_more"
            android:layout_alignParentEnd="true"
            android:layout_width="36dp"
            android:layout_height="50dp"/>
        
        <TextView
            android:id="@+id/fstvAll"
            android:background="@drawable/fs_simple_btn_bg"
            android:layout_toStartOf="@id/fsivMore"
            android:text="@string/fs_select_all"
            android:textColor="@color/fsWhite"
            android:gravity="center"
            android:textSize="14dp"
            android:paddingStart="14dp"
            android:paddingEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </RelativeLayout>
    
    <LinearLayout
        android:layout_below="@id/fslayoutTitle"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/fstvRoot"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/fs_root"
                android:textSize="14dp"
                android:textColor="@color/fsSubText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <ImageView
                android:background="@drawable/fs_arrow"
                android:layout_width="14dp"
                android:layout_height="14dp"/>
            <HorizontalScrollView
                android:id="@+id/fsscrollView"
                android:scrollbars="none"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <LinearLayout
                    android:id="@+id/fsdirContainer"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </HorizontalScrollView>
        </LinearLayout>

        <View
            android:background="@color/fsDivider"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <ListView
            android:id="@+id/fslv"
            android:divider="@null"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"/>
        <View
            android:background="@color/fsDivider"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <LinearLayout
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/fstvCancel"
                android:gravity="center"
                android:text="@string/fs_cancel"
                android:textSize="14dp"
                android:textColor="@color/fsWhite"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/fstvSelected"
                android:gravity="center"
                android:text="@string/fs_selected_pattern"
                android:textSize="14dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1.8"
                android:layout_width="0dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/fstvOk"
                android:gravity="center"
                android:text="@string/fs_ok"
                android:textSize="14dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/fsWhite"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"/>
        </LinearLayout>
    </LinearLayout>   
    
    <View
        android:id="@+id/fsMaskView"
        android:visibility="gone"
        android:background="#9222"
        android:layout_below="@id/fslayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>